fixup! fix spring boot 4 upgrade

--- a/sfg-pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic-data/pom.xml
@@ -58,6 +58,7 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
