--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -337,10 +337,10 @@ jobs:
           files: |
             ./target/surefire-reports/TEST-*.xml
             ./target/failsafe-reports/TEST-*.xml
-            ./sfg-pet-clinic-data/target/failsafe-reports/
-            ./sfg-pet-clinic-data/target/surefire-reports/
-            ./sfg-pet-clinic-web/target/failsafe-reports/
-            ./sfg-pet-clinic-web/target/surefire-reports/
+            ./sfg-pet-clinic-data/target/failsafe-reports/TEST-*.xml
+            ./sfg-pet-clinic-data/target/surefire-reports/TEST-*.xml
+            ./sfg-pet-clinic-web/target/failsafe-reports/TEST-*.xml
+            ./sfg-pet-clinic-web/target/surefire-reports/TEST-*.xml
 
       - name: analyze
         env:
