--- a/.github/workflows/deploy-and-test-cluster.yml
+++ b/.github/workflows/deploy-and-test-cluster.yml
@@ -39,9 +39,17 @@ jobs:
 
     steps:
       - name: Show Version
+        shell: bash
+        env:
+          APPLICATION_NAME: ${{ inputs.application-name }}
+          VERSION: ${{ inputs.version }}
+          HELM_CHART_VERSION: ${{ inputs.helm-chart-version }}
+          NAMESPACE: ${{ inputs.namespace }}
+          DEPLOYED_BY_WORKFLOW: ${{ inputs.deployed-by-workflow }}
+          DEPLOYED_BY_BUILD: ${{ inputs.deployed-by-build }}
         run: |
-          echo "Deploying Application ${{ inputs.application-name }} with Version: ${{ inputs.version }}, Helm chart version: ${{ inputs.helm-chart-version }}, to namespace ${{ inputs.namespace }}"
-          echo "Deployment triggered by workflow ${{ inputs.deployed-by-workflow }}. Run number: ${{ inputs.deployed-by-build }}"
+          echo "Deploying Application ${APPLICATION_NAME} with Version: ${VERSION}, Helm chart version: ${HELM_CHART_VERSION}, to namespace ${NAMESPACE}"
+          echo "Deployment triggered by workflow ${DEPLOYED_BY_WORKFLOW}. Run number: ${DEPLOYED_BY_BUILD}"
 
       - name: Check out the repository
         uses: actions/checkout@v6
@@ -61,9 +69,9 @@ jobs:
 
       - name: Deploy application with Helm
         env:
-          APP_VERSION: ${{ inputs.version }}
-          APPLICATION_NAME: ${{ inputs.application-name }}
           NAMESPACE: ${{ inputs.namespace }}
+          APPLICATION_NAME: ${{ inputs.application-name }}
+          APP_VERSION: ${{ inputs.version }}
         run: |
           # Install/upgrade the Helm chart
           echo "Deploying Application: $APP_VERSION"
@@ -78,6 +86,11 @@ jobs:
         env:
           NAMESPACE: ${{ inputs.namespace }}
           APPLICATION_NAME: ${{ inputs.application-name }}
+          DEPLOYED_BY_WORKFLOW: ${{ inputs.deployed-by-workflow }}
+          DEPLOYED_BY_BUILD: ${{ inputs.deployed-by-build }}
+          VERSION: ${{ inputs.version }}
+          GITHUB_SERVER_URL: ${{ github.server_url }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           if ! kubectl wait --for=condition=ready pod -l app.kubernetes.io/name=$APPLICATION_NAME -n $NAMESPACE --timeout=180s; then
             POD_NAME=$(kubectl get pods -l app.kubernetes.io/name=$APPLICATION_NAME -o jsonpath="{.items[0].metadata.name}" -n $NAMESPACE)
@@ -86,9 +99,9 @@ jobs:
             kubectl describe pod $POD_NAME -n $NAMESPACE
             exit 1
           fi
-          BUILD_LINK="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ inputs.deployed-by-build }}"
-          echo "::notice:: ### Helm Deployment: Application ${{ inputs.application-name }}, Version: ${{ inputs.version }}"
-          echo "::notice:: ### Deployment triggered by workflow ${{ inputs.deployed-by-workflow }}. Run number: ${{ inputs.deployed-by-build }}: $BUILD_LINK"
+          BUILD_LINK="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$DEPLOYED_BY_BUILD"
+          echo "::notice:: ### Helm Deployment: Application $APPLICATION_NAME, Version: $VERSION"
+          echo "::notice:: ### Deployment triggered by workflow $DEPLOYED_BY_WORKFLOW. Run number: $DEPLOYED_BY_BUILD: $BUILD_LINK"
 
       - name: Test Application
         env:
