--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,6 @@ name: Maven Release
 on:
   workflow_dispatch:
 
-permissions: write-all
-
 jobs:
   
   check-branch:
@@ -61,6 +59,9 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: [ check-branch, check-maven-version ]
+    permissions:
+      contents: write
+      packages: write
     steps:
 
       - name: Checkout project
