--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>guru.springframework.sfg-pet-clinic</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
 
     <name>${project.artifactId}</name>
     <description>Demo project for Spring Boot</description>
@@ -30,7 +30,7 @@
         <connection>scm:git:https://github.com/${project.organization.name}/${repo.name}.git</connection>
         <developerConnection>scm:git:https://github.com/${project.organization.name}/${repo.name}.git</developerConnection>
         <url>https://github.com/${project.organization.name}/${repo.name}.git</url>
-        <tag>HEAD</tag>
+        <tag>sfg-pet-clinic-0.0.3</tag>
     </scm>
 
     <properties>
@@ -296,10 +296,7 @@
                                     <entry key="helm.chart.version" value="v${project.version}" />
                                 </propertyfile>
                                 <!--suppress UnresolvedMavenProperty: git.commit.id.abbrev is set by git git-commit-id-maven-plugin -->
-                                <replaceregexp file="${project.build.directory}/helm.properties"
-                                               match="helm\.chart\.version=(v[0-9]+\.[0-9]+\.[0-9]+)_.*-SNAPSHOT"
-                                               replace="helm.chart.version=\1-${git.commit.id.abbrev}"
-                                               byline="true" />
+                                <replaceregexp file="${project.build.directory}/helm.properties" match="helm\.chart\.version=(v[0-9]+\.[0-9]+\.[0-9]+)_.*-SNAPSHOT" replace="helm.chart.version=\1-${git.commit.id.abbrev}" byline="true" />
                                 <property file="${project.build.directory}/helm.properties" />
                             </target>
                         </configuration>
