--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>guru.springframework.sfg-pet-clinic</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
 
     <name>${project.artifactId}</name>
     <description>Demo project for Spring Boot</description>
@@ -30,7 +30,7 @@
         <connection>scm:git:https://github.com/${project.organization.name}/${repo.name}.git</connection>
         <developerConnection>scm:git:https://github.com/${project.organization.name}/${repo.name}.git</developerConnection>
         <url>https://github.com/${project.organization.name}/${repo.name}.git</url>
-        <tag>sfg-pet-clinic-0.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
