--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -2,6 +2,9 @@ name: Maven Build
 run-name: >
   ${{ github.workflow }}: ${{ github.event_name }} for ${{ github.ref_name }} by @${{ github.actor }}
 
+env:
+  JAVA_VERSION: 21
+
 on:
   push:
     branches: [ "main", "master", "feature/**", "dependabot/**", "release/**" ]
@@ -33,7 +36,7 @@ jobs:
       - name: Set up java 21
         uses: actions/setup-java@v5
         with:
-          java-version: 21
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
           cache: 'maven'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml.
@@ -138,7 +141,7 @@ jobs:
       - name: Set up java 21
         uses: actions/setup-java@v5
         with:
-          java-version: 21
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
           cache: 'maven'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml.
@@ -291,7 +294,7 @@ jobs:
       - name: Set up java 21
         uses: actions/setup-java@v5
         with:
-          java-version: 21
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
           cache: 'maven'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml.
