--- a/sfg-pet-clinic-web/helm-charts/templates/tests/test-connection.yaml
+++ b/sfg-pet-clinic-web/helm-charts/templates/tests/test-connection.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "application-template.fullname" . }}-test-"
+  name: "{{ include "application-template.fullname" . }}-test"
   namespace: {{ .Values.global.namespace }}
   labels:
     app.kubernetes.io/component: helm-test
