--- a/sfg-pet-clinic-web/helm-charts/templates/tests/test-connection.yaml
+++ b/sfg-pet-clinic-web/helm-charts/templates/tests/test-connection.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "application-template.fullname" . }}-test-connection"
+  name: "{{ include "application-template.fullname" . }}-test"
   namespace: {{ .Values.global.namespace }}
   labels:
     app.kubernetes.io/component: helm-test
-    app.kubernetes.io/name: "{{ include "application-template.fullname" . }}-test-connection"
+    app.kubernetes.io/name: "{{ include "application-template.fullname" . }}-test"
     app.kubernetes.io/instance: "{{ .Release.Name }}-test"
   annotations:
     "helm.sh/hook": test
@@ -17,10 +17,16 @@ spec:
       command: [ '/bin/sh', '-c' ]
       args:
         - |
+          set +o errexit
+          echo ">>> Start Test Pet Clinic"
+
           echo "### Test 1: Checking health endpoint using service short name: {{ include "application-template.fullname" . }}"
           wget -O- -q {{ include "application-template.fullname" . }}:{{ .Values.service.port }}/actuator/health
           echo "Exit code: $?"
+
           echo "### Test 2: Checking health endpoint using fully qualified domain name (FQDN): {{ include "application-template.serviceFQDN" . }}"
           wget -O- -q {{ include "application-template.serviceFQDN" . }}:{{ .Values.service.port }}/actuator/health
           echo "Exit code: $?"
+
+          echo ">>> End Test Pet Clinic"
   restartPolicy: Never
